// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Auth/Auth Auth Page 1`] = `
<div
  class="h-full flex flex-col bg-white border border-gray-100 container mx-auto my-auto p-2"
  style="text-align: center;"
>
  <h1
    class="text-2xl mb-8"
  >
    ログイン
  </h1>
  <h2
    class="mb-3 "
  >
    Googleアカウントでログイン
  </h2>
  <div
    class="w-96 mb-5 mx-auto"
  >
    <div
      class="sbui-auth"
    >
      <div
        class="sbui-space-col sbui-space-y-8"
      >
        <div
          class="sbui-space-col sbui-space-y-8"
        >
          <div
            class="sbui-space-col sbui-space-y-4"
          >
            <span
              class="sbui-typography-text sbui-auth-label sbui-typography-text-secondary"
            >
              Sign in with
            </span>
            <div
              class="sbui-space-col sbui-space-y-2"
            >
              <div>
                <span
                  class="sbui-btn-container sbui-btn--w-full"
                >
                  <button
                    class="sbui-btn sbui-btn-default sbui-btn--w-full sbui-btn-container--shadow sbui-btn--medium flex items-center sbui-btn--text-align-center"
                    style="background-color: rgb(206, 68, 48); color: white;"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="google"
                      data-prefix="fab"
                      focusable="false"
                      role="img"
                      viewBox="0 0 488 512"
                      width="21"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M488 261.8C488 403.3 391.1 504 248 504 110.8 504 0 393.2 0 256S110.8 8 248 8c66.8 0 123 24.5 166.3 64.9l-67.5 64.9C258.5 52.6 94.3 116.6 94.3 256c0 86.5 69.1 156.6 153.7 156.6 98.2 0 135-70.4 140.8-106.9H248v-85.3h236.1c2.3 12.7 3.9 24.9 3.9 41.4z"
                        fill="currentColor"
                      />
                    </svg>
                    <span>
                      Sign up with google
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="mb-5"
  />
  <h2
    class="mb-3 "
  >
    IDとパスワードでログイン
  </h2>
  <form>
    <input
      class="appearance-none block  text-gray-700 border border-gray-300 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 w-96 mx-auto"
      name="id"
      placeholder="ID/メールアドレス"
    />
    <br />
    <input
      class="appearance-none block w-96 text-gray-700 border border-gray-300 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mt-5 mx-auto"
      name="password"
      placeholder="パスワード"
      type="password"
    />
    <br />
    <input
      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 text-sm mt-10 mx-auto w-96 h-11 rounded-md"
      type="submit"
      value="ログイン"
    />
    <a
      class=" hover:text-blue-700 hover:border-blue-700 text-blue-500 font-bold py-2 px-4 text-sm mx-auto w-96 h-11 rounded-md border-blue-500 border-2 block mt-10"
      href="/registration"
    >
      アカウントを作成
    </a>
  </form>
</div>
`;

exports[`Storyshots Auth/Registration Registration Page 1`] = `
<div
  class="h-full flex flex-col bg-white border border-gray-100 container mx-auto my-auto p-2"
  style="text-align: center;"
>
  <h1
    class="text-2xl mb-5"
  >
    登録
  </h1>
  <form>
    <input
      class="appearance-none block  text-gray-700 border border-gray-300 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 w-96 mx-auto"
      name="id"
      placeholder="メールアドレス"
    />
    <br />
    <input
      class="appearance-none block w-96 text-gray-700 border border-gray-300 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mt-5 mx-auto"
      name="password"
      placeholder="パスワード(6文字以上)"
      type="password"
    />
    <br />
    <input
      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 text-sm mt-10 mx-auto w-96 h-11 rounded-md"
      type="submit"
      value="作成"
    />
    <a
      class=" hover:text-gray-700 hover:border-gray-700 text-gray-500 font-bold py-2 px-4 text-sm mt-10 mx-auto w-96 h-11 rounded-md border-gray-500 border-2 block mb-5"
      href="/"
    >
      キャンセル
    </a>
  </form>
</div>
`;

exports[`Storyshots Footer Footer Story 1`] = `
<footer
  class="mt-5 px-4 pt-2 pb-3 text-center text-gray-600 bg-gray-200"
>
  <small>
    © 2021 keito654
  </small>
</footer>
`;

exports[`Storyshots Header Header Story 1`] = `
<header
  class="border-b-2 mb-3 bg-white"
>
  <div
    class="container mx-auto flex justify-between"
  >
    <a
      class="flex justify-items-center"
      href="/"
    >
      <h1
        class="pt-4 pb-2 ml-4"
      >
        <span
          class="inline-block align-middle"
        >
          先生のための席替えアプリ
        </span>
      </h1>
    </a>
    <div
      class="flex justify-end mx-2 my-3"
    >
      <a
        class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-3 border border-gray-400 rounded-full"
        href="/about"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 inline mr-1.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="align-middle"
        >
          このサイトについて
        </span>
      </a>
      <a
        class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-3 border border-gray-400 rounded-full ml-1 lg:ml-5"
        href="/"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 inline mr-1.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="align-middle"
        >
          ログアウト
        </span>
      </a>
    </div>
  </div>
</header>
`;

exports[`Storyshots MenuBar Header Story 1`] = `null`;

exports[`Storyshots Random/Random Char Random Page 1`] = `
<div
  class="h-full flex flex-col bg-white border border-gray-100 container mx-auto my-auto p-2"
  style="text-align: center;"
>
  <div
    class="flex items-center space-x-3 lg:space-x-6 my-auto overflow-auto mx-auto border border-gray-200 p-1 w-fit max-w-full h-full"
  >
    <div
      class="space-y-2"
      id="column0"
    >
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
    </div>
    <div
      class="space-y-2"
      id="column1"
    >
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
    </div>
    <div
      class="space-y-2"
      id="column2"
    >
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-testid="seat-element"
      >
        1
      </div>
    </div>
  </div>
  <br />
  <div
    class="flex flex-col"
  >
    <div
      class="flex justify-center lg:space-x-10 space-x-4"
    >
      <button
        class="bg-blue-500  text-white font-bold py-2 px-4 rounded w-40
              hover:bg-blue-700
              "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 inline mr-1.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="align-middle"
        >
          席替え開始！
        </span>
      </button>
      <button
        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded w-40 "
        type="button"
      >
        リセット
      </button>
    </div>
    <a
      class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-3 border border-gray-400 rounded-full mt-4 w-auto mx-auto"
      href="/setting"
    >
      <svg
        aria-hidden="true"
        class="h-5 w-5 inline mr-1.5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
        <path
          d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <span
        class="align-middle"
      >
        席の設定に移動
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots Set/SetChildNum Set Child Num Story 1`] = `
<div
  class="h-full flex flex-col"
  style="text-align: center;"
>
  <div
    class="my-auto"
  >
    <label
      for="num"
    >
      児童・生徒の人数
    </label>
    <input
      class="appearance-none block w-32 text-gray-700 border border-gray-300 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mx-auto mt-3 "
      id="num"
      min="1"
      type="number"
      value="1"
    />
    <p
      class="mt-8 container mx-auto"
    >
      出席番号の最大の数を入力してください。入力すると１～入力した数まで欠番なく児童・生徒がいると認識されます。
    </p>
  </div>
</div>
`;

exports[`Storyshots Set/Setting Set Component Page 1`] = `
<div
  class="flex flex-col justify-center h-full p-2"
  id="settingView"
>
  <div
    class="flex items-center mb-1 space-x-3 lg:space-x-6 my-auto overflow-auto mx-auto border border-gray-200 h-full p-1 w-fit max-w-full "
  >
    <div
      class="space-y-2"
      id="column0"
    >
      <div
        class=" border border-gray-600 w-8 h-8"
        data-place="0,0"
        data-testid="set-element"
        data-value="1"
        style="text-align: center;"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-place="0,1"
        data-testid="set-element"
        data-value="1"
        style="text-align: center;"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-place="0,2"
        data-testid="set-element"
        data-value="1"
        style="text-align: center;"
      >
        1
      </div>
    </div>
    <div
      class="space-y-2"
      id="column1"
    >
      <div
        class=" border border-gray-600 w-8 h-8"
        data-place="1,0"
        data-testid="set-element"
        data-value="1"
        style="text-align: center;"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-place="1,1"
        data-testid="set-element"
        data-value="1"
        style="text-align: center;"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-place="1,2"
        data-testid="set-element"
        data-value="1"
        style="text-align: center;"
      >
        1
      </div>
    </div>
    <div
      class="space-y-2"
      id="column2"
    >
      <div
        class=" border border-gray-600 w-8 h-8"
        data-place="2,0"
        data-testid="set-element"
        data-value="1"
        style="text-align: center;"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-place="2,1"
        data-testid="set-element"
        data-value="1"
        style="text-align: center;"
      >
        1
      </div>
      <div
        class=" border border-gray-600 w-8 h-8"
        data-place="2,2"
        data-testid="set-element"
        data-value="1"
        style="text-align: center;"
      >
        1
      </div>
    </div>
  </div>
  <div
    class="flex flex-col w-full mx-auto mt-auto mb-5"
    id="controlbutton"
  >
    <div
      class="mt-1 mx-3"
      id="numView"
    >
      <div
        class="text-blue-700"
      >
        現在の席数:9　
      </div>
      <div>
        児童・生徒の人数:1
      </div>
    </div>
    <div
      class=" bottom-auto flex justify-center space-x-5 border-t-2 mx-3 mt-4 pt-4"
    >
      <div
        class="flex flex-col justify-center space-y-1"
      >
        <button
          class="bg-blue-500 hover:bg-blue-700 text-white font-bold px-3 py-3 h-10 w-10 rounded"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 h-10 w-10 rounded"
          style="margin-left: 0px;"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex justify-center space-x-1 items-center"
      >
        <button
          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 h-10 w-10 rounded"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-3 px-3 h-10 w-10 rounded"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex justify-center mt-10"
    >
      <button
        class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-r"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 inline mr-1.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 13l4 4L19 7"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        <span
          class="align-middle"
        >
          設定を終了
        </span>
      </button>
    </div>
  </div>
</div>
`;
